<resources>
    <string name="app_name">Week8MaterialApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="playlist">Playlist</string>
    <string name="profile_help_text">The registered email cannot be changed through this app. Please contact us if you need further assistance.</string>
    <string name="profile_sub_text">Change your data and password</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="edm_playlist">EDM Playlist</string>
    <string name="play">Play</string>
    <string name="like">Like</string>
</resources>